test/fails/syntaxError.imp

fun  addOne(n)
{       
        return n;
}


fun  main(n)
vars tmp
{       
    tmp = (addOne(n) + );
    return tmp;
}
